--- a/Visual C# .NET/NegocioFlr/NegocioFlr.Datos/NegocioFlr.Datos.csproj
+++ b/Visual C# .NET/NegocioFlr/NegocioFlr.Datos/NegocioFlr.Datos.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ErrExcelDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SesiUsrsDatos.cs" />
     <Compile Include="UsuariosDatos.cs" />
   </ItemGroup>
   <ItemGroup>
