--- a/Visual C# .NET/NegocioFlr/NegocioFlr.Entidades/NegocioFlr.Entidades.csproj
+++ b/Visual C# .NET/NegocioFlr/NegocioFlr.Entidades/NegocioFlr.Entidades.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Clientes.cs" />
     <Compile Include="ErrExcel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SesiUsrs.cs" />
     <Compile Include="Usuarios.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
