--- a/Visual C# .NET/NegocioFlr/NegocioFlr.Negocio/NegocioFlr.Negocio.csproj
+++ b/Visual C# .NET/NegocioFlr/NegocioFlr.Negocio/NegocioFlr.Negocio.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="ErrExcelNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SesiUsrsNegocio.cs" />
     <Compile Include="UsuariosNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
